Fixed alignment on mobile devices

--- a/src/components/kanban/kanban.scss
+++ b/src/components/kanban/kanban.scss
@@ -1,16 +1,15 @@
 .kanban {
   display: flex;
   flex-direction: row;
-  flex: 1;
   align-items: flex-start;
-  justify-content: center;
+  gap: 20px;
 
   &__section {
+    min-height: 275px;
     width: 400px;
     background-color: #05595b;
     padding: 10px;
     border-radius: 10px;
-    margin: 10px;
 
     &__title {
       font-size: 1.5rem;
@@ -34,7 +33,6 @@
     flex-direction: column;
     width: 100%;
     &__section {
-      margin: 10px;
       width: 100%;
     }
   }
